fixed get_table_size method

--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "09124eba",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7d2590ed",
    "metadata": {},
    "outputs": [
@@ -66,480 +66,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/22 [00:00<?, ?it/s]"
+      "  0%|          | 0/6 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flow for target entity AddtlCompany_Address..\n",
-      "- EXEC dbo.PullData_AddtlCompany_Address2_prc...\n",
-      "  - duration 01:10\n",
-      "rows 18858666, stage table size: 1319.015625\n",
-      "- EXEC dbo.MergeData_AddtlCompany_Address2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  5%|▍         | 1/22 [03:26<1:12:14, 206.42s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 02:15\n",
-      "flow for target entity AddtlCompany_BusinessDescription..\n",
-      "- EXEC dbo.PullData_AddtlCompany_BusinessDescription2_prc...\n",
-      "  - duration 01:04\n",
-      "rows 6774311, stage table size: 1747.703125\n",
-      "- EXEC dbo.MergeData_AddtlCompany_BusinessDescription2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  9%|▉         | 2/22 [05:06<47:56, 143.82s/it]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 35.54\n",
-      "flow for target entity AddtlCompany_LongBusinessDescription..\n",
-      "- EXEC dbo.PullData_AddtlCompany_LongBusinessDescription2_prc...\n",
-      "  - duration 2.18\n",
-      "rows 77450, stage table size: 230.593750\n",
-      "- EXEC dbo.MergeData_AddtlCompany_LongBusinessDescription2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 14%|█▎        | 3/22 [05:10<25:18, 79.92s/it] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 1.63\n",
-      "flow for target entity CompanyBiteSize_CompanyBiteSize..\n",
-      "- EXEC dbo.PullData_CompanyBiteSize_CompanyBiteSize2_prc...\n",
-      "  - duration 9.46\n",
-      "rows 39625, stage table size: 2.203125\n",
-      "- EXEC dbo.MergeData_CompanyBiteSize_CompanyBiteSize2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|█▊        | 4/22 [05:20<15:41, 52.32s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 0.48\n",
-      "flow for target entity CompanyGeosOfInt_CompanyGeosOfInterest..\n",
-      "- EXEC dbo.PullData_CompanyGeosOfInt_CompanyGeosOfInterest2_prc...\n",
-      "  - duration 31.59\n",
-      "rows 374445, stage table size: 15.140625\n",
-      "- EXEC dbo.MergeData_CompanyGeosOfInt_CompanyGeosOfInterest2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 23%|██▎       | 5/22 [05:56<13:07, 46.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 4.08\n",
-      "flow for target entity CompanyIndOfInt_CompanyIndustriesOfInterest..\n",
-      "- EXEC dbo.PullData_CompanyIndOfInt_CompanyIndustriesOfInterest2_prc...\n",
-      "  - duration 5.20\n",
-      "rows 840892, stage table size: 33.703125\n",
-      "- EXEC dbo.MergeData_CompanyIndOfInt_CompanyIndustriesOfInterest2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 27%|██▋       | 6/22 [06:06<09:04, 34.01s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 4.81\n",
-      "flow for target entity CompanyStagesOfInt_CompanyStagesOfInterest..\n",
-      "- EXEC dbo.PullData_CompanyStagesOfInt_CompanyStagesOfInterest2_prc...\n",
-      "  - duration 7.11\n",
-      "rows 163283, stage table size: 6.765625\n",
-      "- EXEC dbo.MergeData_CompanyStagesOfInt_CompanyStagesOfInterest2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 32%|███▏      | 7/22 [06:14<06:25, 25.67s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 1.31\n",
-      "flow for target entity GICS_GICS..\n",
-      "- EXEC dbo.PullData_GICS_GICS2_prc...\n",
-      "  - duration 1.43\n",
-      "rows 49569, stage table size: 2.453125\n",
-      "- EXEC dbo.MergeData_GICS_GICS2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 36%|███▋      | 8/22 [06:16<04:12, 18.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 0.26\n",
-      "flow for target entity KeyDev_FutureEvent..\n",
-      "- EXEC dbo.PullData_KeyDev_FutureEvent2_prc...\n",
-      "  - duration 01:49\n",
-      "rows 11343570, stage table size: 1911.343750\n",
-      "- EXEC dbo.MergeData_KeyDev_FutureEvent2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 41%|████      | 9/22 [08:49<13:05, 60.43s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 44.57\n",
-      "flow for target entity KeyDev_FutureEventToObjectToEventType..\n",
-      "- EXEC dbo.PullData_KeyDev_FutureEventToObjectToEventType2_prc...\n",
-      "  - duration 28.58\n",
-      "rows 7419249, stage table size: 273.414062\n",
-      "- EXEC dbo.MergeData_KeyDev_FutureEventToObjectToEventType2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 45%|████▌     | 10/22 [09:50<12:06, 60.54s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 32.14\n",
-      "flow for target entity KeyDev_KeyDev..\n",
-      "- EXEC dbo.PullData_KeyDev_KeyDev2_prc...\n",
-      "  - duration 04:52\n",
-      "rows 56709636, stage table size: 11117.898437\n",
-      "- EXEC dbo.MergeData_KeyDev_KeyDev2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 11/22 [18:09<35:42, 194.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 03:26\n",
-      "flow for target entity KeyDev_KeyDevToObjectToEventType..\n",
-      "- EXEC dbo.PullData_KeyDev_KeyDevToObjectToEventType2_prc...\n",
-      "  - duration 02:10\n",
-      "rows 21176825, stage table size: 799.078125\n",
-      "- EXEC dbo.MergeData_KeyDev_KeyDevToObjectToEventType2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 55%|█████▍    | 12/22 [22:13<34:57, 209.73s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 01:53\n",
-      "flow for target entity Professional_PersonProfessionalCompensation..\n",
-      "- EXEC dbo.PullData_Professional_PersonProfessionalCompensation2_prc...\n",
-      "  - duration 02:00\n",
-      "rows 14800305, stage table size: 1055.335937\n",
-      "- EXEC dbo.MergeData_Professional_PersonProfessionalCompensation2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 59%|█████▉    | 13/22 [26:24<33:20, 222.26s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 02:10\n",
-      "flow for target entity Professional_PersonProfessional..\n",
-      "- EXEC dbo.PullData_Professional_PersonProfessional2_prc...\n",
-      "  - duration 01:01\n",
-      "rows 3613788, stage table size: 458.578125\n",
-      "- EXEC dbo.MergeData_Professional_PersonProfessional2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 64%|██████▎   | 14/22 [27:57<24:25, 183.24s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 31.85\n",
-      "flow for target entity Symbol_DandBSymbol..\n",
-      "- EXEC dbo.PullData_Symbol_DandBSymbol2_prc...\n",
-      "  - duration 38.66\n",
-      "rows 5226818, stage table size: 275.328125\n",
-      "- EXEC dbo.MergeData_Symbol_DandBSymbol2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 68%|██████▊   | 15/22 [29:17<17:43, 151.88s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 40.48\n",
-      "flow for target entity FutureEventMkt_FutureEventMkt..\n",
-      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMkt2_prc...\n",
-      "  - duration 02:30\n",
-      "rows 19264586, stage table size: 2769.867187\n",
-      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMkt2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 73%|███████▎  | 16/22 [33:03<17:26, 174.40s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 01:15\n",
-      "flow for target entity FutureEventMkt_FutureEventMktSplitInfo..\n",
-      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMktSplitInfo2_prc...\n",
-      "  - duration 16.20\n",
-      "rows 3960371, stage table size: 232.023437\n",
-      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMktSplitInfo2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 77%|███████▋  | 17/22 [33:38<11:01, 132.39s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 18.41\n",
-      "flow for target entity FutureEventMkt_FutureEventMktToObjectToEventType..\n",
-      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMktToObjectToEventType2_prc...\n",
-      "  - duration 40.04\n",
-      "rows 11379757, stage table size: 419.203125\n",
-      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMktToObjectToEventType2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 82%|████████▏ | 18/22 [35:08<07:58, 119.52s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 49.47\n",
-      "flow for target entity KeyDevPlus_KeyDev..\n",
-      "- EXEC dbo.PullData_KeyDevPlus_KeyDev2_prc...\n",
-      "  - duration 06:29\n",
-      "rows 69955530, stage table size: 14153.257812\n",
-      "- EXEC dbo.MergeData_KeyDevPlus_KeyDev2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 86%|████████▋ | 19/22 [45:57<13:55, 278.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 04:19\n",
-      "flow for target entity KeyDevPlus_KeyDevToObjectToEventType..\n",
-      "- EXEC dbo.PullData_KeyDevPlus_KeyDevToObjectToEventType2_prc...\n",
-      "  - duration 01:41\n",
-      "rows 21176825, stage table size: 779.898437\n",
-      "- EXEC dbo.MergeData_KeyDevPlus_KeyDevToObjectToEventType2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 91%|█████████ | 20/22 [49:10<08:25, 252.89s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 01:31\n",
-      "flow for target entity CompDetail_CompensationAdjustment..\n",
-      "- EXEC dbo.PullData_CompDetail_CompensationAdjustment2_prc...\n",
-      "  - duration 0.15\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 95%|█████████▌| 21/22 [49:10<02:57, 177.06s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rows 152, stage table size: 0.070312\n",
-      "- EXEC dbo.MergeData_CompDetail_CompensationAdjustment2_prc...\n",
-      "  - duration 0.04\n",
-      "flow for target entity CompDetail_CompensationDetail..\n",
-      "- EXEC dbo.PullData_CompDetail_CompensationDetail2_prc...\n",
-      "  - duration 01:37\n",
-      "rows 23108990, stage table size: 2012.000000\n",
-      "- EXEC dbo.MergeData_CompDetail_CompensationDetail2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 22/22 [53:05<00:00, 144.78s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - duration 02:17\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 30\u001b[0m\n\u001b[0;32m      1\u001b[0m entity_names \u001b[38;5;241m=\u001b[39m[\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAddtlCompany_Address\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAddtlCompany_BusinessDescription\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompDetail_CompensationDetail\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     26\u001b[0m ]\n\u001b[0;32m     29\u001b[0m durations \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m---> 30\u001b[0m \u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mSQL_Communicator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mas\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msc\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m     31\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43men\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtqdm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mentity_names\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m     32\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mflow for target entity \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43men\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m..\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Code\\python_utils\\sql\\sql_requests.py:58\u001b[0m, in \u001b[0;36mSQL_Communicator.__exit__\u001b[1;34m(self, exc_type, exc_value, exc_tb)\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__exit__\u001b[39m(\u001b[38;5;28mself\u001b[39m, exc_type, exc_value, exc_tb):\n\u001b[1;32m---> 58\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "flow for target entity Professional_Compensation..\n",
+      "- EXEC dbo.PullData_Professional_Compensation2_prc...\n",
+      "  - duration 02:52\n",
+      "rows 48222280, stage table size: 3795.203125\n",
+      "- EXEC dbo.MergeData_Professional_Compensation2_prc...\n"
      ]
     }
    ],
    "source": [
     "entity_names =[\n",
-    "    \"AddtlCompany_Address\",\n",
-    "    \"AddtlCompany_BusinessDescription\",\n",
-    "    \"AddtlCompany_LongBusinessDescription\",\n",
-    "    \"CompanyBiteSize_CompanyBiteSize\",\n",
-    "    \"CompanyGeosOfInt_CompanyGeosOfInterest\",\n",
-    "    \"CompanyIndOfInt_CompanyIndustriesOfInterest\",\n",
-    "    \"CompanyStagesOfInt_CompanyStagesOfInterest\",\n",
-    "    \"GICS_GICS\",\n",
-    "    \"KeyDev_FutureEvent\",\n",
-    "    \"KeyDev_FutureEventToObjectToEventType\",\n",
-    "    \"KeyDev_KeyDev\",\n",
-    "    \"KeyDev_KeyDevToObjectToEventType\",\n",
-    "    \"Professional_PersonProfessionalCompensation\",\n",
-    "    \"Professional_PersonProfessional\",\n",
-    "\n",
-    "    \"Symbol_DandBSymbol\",\n",
-    "    \"FutureEventMkt_FutureEventMkt\",\n",
-    "    \"FutureEventMkt_FutureEventMktSplitInfo\",\n",
-    "    \"FutureEventMkt_FutureEventMktToObjectToEventType\",\n",
-    "\n",
-    "    \"KeyDevPlus_KeyDev\",\n",
-    "    \"KeyDevPlus_KeyDevToObjectToEventType\",\n",
-    "    \"CompDetail_CompensationAdjustment\",\n",
-    "    \"CompDetail_CompensationDetail\"\n",
+    "\"Professional_Compensation\",\n",
+    "\"Professional_Person\",\n",
+    "\"Professional_BiographyPerson\",\n",
+    "\"Professional_Professional\",\n",
+    "\"Professional_ProfessionalCoverage\",\n",
+    "\"Professional_ProToProFunction\",\n",
     "]\n",
+    "\n",
     "\n",
     "\n",
     "durations = []\n",
@@ -559,7 +110,8 @@
     "                flow_td += td\n",
     "                print(f'  - duration {format_time_delta(td)}')\n",
     "                if i == 0:  ## pull sp\n",
-    "                    rows_count, table_size = sc.get_table_size(stage_tbl)\n",
+    "                    ret = sc.get_table_size(stage_tbl)\n",
+    "                    rows_count, table_size = ret[0][0], ret[0][1]\n",
     "                    print(f'rows {rows_count}, stage table size: {table_size}')\n",
     "            except ex:\n",
     "                print(f'execution failed {ex}')\n",
