fixed notebook error

--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e3f4aaec",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7d2590ed",
    "metadata": {},
    "outputs": [
@@ -74,10 +74,43 @@
      "output_type": "stream",
      "text": [
       "flow for target entity Professional_Compensation..\n",
-      "- EXEC dbo.PullData_Professional_Compensation2_prc...\n",
-      "  - duration 02:52\n",
-      "rows 48222280, stage table size: 3795.203125\n",
-      "- EXEC dbo.MergeData_Professional_Compensation2_prc...\n"
+      "- EXEC dbo.PullData_Professional_Compensation2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/6 [02:49<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  - duration 02:49\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ex' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 30\u001b[0m\n\u001b[0;32m     29\u001b[0m ret \u001b[38;5;241m=\u001b[39m sc\u001b[38;5;241m.\u001b[39mget_table_size(stage_tbl)\n\u001b[1;32m---> 30\u001b[0m rows_count, table_size \u001b[38;5;241m=\u001b[39m \u001b[43mret\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m, ret[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrows \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrows_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, stage table size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtable_size\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m             rows_count, table_size \u001b[38;5;241m=\u001b[39m ret[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m], ret[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     31\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrows \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrows_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, stage table size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtable_size\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 32\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[43mex\u001b[49m:\n\u001b[0;32m     33\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexecution failed \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     35\u001b[0m velocity \u001b[38;5;241m=\u001b[39m table_size \u001b[38;5;241m/\u001b[39m Decimal(flow_td\u001b[38;5;241m.\u001b[39mtotal_seconds()) \u001b[38;5;28;01mif\u001b[39;00m flow_td\u001b[38;5;241m.\u001b[39mtotal_seconds() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ex' is not defined"
      ]
     }
    ],
@@ -110,8 +143,7 @@
     "                flow_td += td\n",
     "                print(f'  - duration {format_time_delta(td)}')\n",
     "                if i == 0:  ## pull sp\n",
-    "                    ret = sc.get_table_size(stage_tbl)\n",
-    "                    rows_count, table_size = ret[0][0], ret[0][1]\n",
+    "                    rows_count, table_size = sc.get_table_size(stage_tbl)\n",
     "                    print(f'rows {rows_count}, stage table size: {table_size}')\n",
     "            except ex:\n",
     "                print(f'execution failed {ex}')\n",
